objects/IFE_Part_Overide__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IFE Part Overrides</relationshipLabel>
        <relationshipName>IFE_Part_Overrides</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <label>Customer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Part__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IFE Part</label>
        <referenceTo>IFE_Part__c</referenceTo>
        <relationshipLabel>IFE Part Overrides</relationshipLabel>
        <relationshipName>IFE_Part_Overrides</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <label>Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                    <default>true</default>
                    <label>Add</label>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IFE Part Overide</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>IFE_Part__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>IFE Part Overide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IFE Part Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>